# visi

./: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3dee83604016_initial_migration.py  ef2910566747_add_users_table.py
api/: main.py
api/core/: config.py  database.py  exceptions.py
api/src/events/: models.py  repository.py  routes.py  schemas.py  service.py
api/src/heroes/: models.py  repository.py  routes.py  schemas.py  service.py
api/src/users/: models.py  repository.py  routes.py  service.py
tests/: test_main.py
